--- a/app/src/main/res/layout/activity_transit_options.xml
+++ b/app/src/main/res/layout/activity_transit_options.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.elec390.ryanpoitras.intoxic_aid.MainActivity">
+    tools:context="com.elec390.ryanpoitras.intoxic_aid.TransitOptions">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -16,12 +16,13 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#FFFFFF"
+            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_transit_options" />
+
 
 
 </android.support.design.widget.CoordinatorLayout>
