--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -40,4 +40,13 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:clickable="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Database Test"
+        android:id="@+id/Test"
+        android:layout_below="@+id/TaxiButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp" />
 </RelativeLayout>
