Connecting Map to DB & Settings, Address

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,4 +50,10 @@
         android:layout_below="@+id/TaxiButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="42dp"
+        android:id="@+id/Test2"/>
 </RelativeLayout>
