--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -21,5 +21,9 @@
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="Address" />
 
+    <header
+        android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$BlockedContactsPreferenceFragment"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="Block Contacts" />
 
 </preference-headers>
