--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -2,7 +2,7 @@
 
     <!-- These settings headers are only used on tablets. -->
 
-    <header
+   <!-- <header
         android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general" />
@@ -15,7 +15,7 @@
     <header
         android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$DataSyncPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
-        android:title="@string/pref_header_data_sync" />
+        android:title="@string/pref_header_data_sync" />-->
     <header
         android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$AddressPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
