--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,7 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/DirectionListView"
-        android:layout_below="@+id/map">
+        android:layout_below="@+id/map"
+        android:textAlignment="center"
+        android:background="#ffffff">
+
 
     </ListView>
 
