--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,11 +8,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#FFFFFF"
+    android:background="#ffffff"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.elec390.ryanpoitras.intoxic_aid.MainActivity"
     tools:showIn="@layout/activity_main"
     android:id="@+id/mainLayout">
+
 
 
     <Button
@@ -24,7 +25,7 @@
         android:textAllCaps="true"
         android:textSize="42dp"
         android:textStyle="bold"
-        android:background="#d9d9d9"
+        android:background="@drawable/button_custom_config"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="46dp"
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/TaxiButton"
+        android:background="@drawable/button_custom_config"
         android:text="CALL A TAXI"
         android:textSize="42dp"
         android:textStyle="bold"
