--- a/app/src/main/res/layout/content_transit_options.xml
+++ b/app/src/main/res/layout/content_transit_options.xml
@@ -17,32 +17,31 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="250dp"
         android:background="#FFFFFF"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/PublicTransitLayout">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="200dp"
+            android:layout_alignParentStart="true"
             android:text="PUBLIC TRANSIT"
-            android:id = "@+id/publictansit_textview"
-            android:textSize="40dp"
+            android:id = "@+id/PublicTransitText"
+            android:textSize="60dp"
             android:textColor="#000000"
             android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
         <Button
             android:id="@+id/TransitButton"
-            android:layout_width="378dp"
+            android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="81dp"
-            android:layout_x="-6dp"
-            android:layout_y="91dp"
+            android:layout_y="150dp"
             android:textSize="13dp"
             android:textAlignment="center"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:background="@drawable/transit_options_button_design"
+            android:textColor="#000000" />
 
 
 
@@ -51,31 +50,29 @@
     <AbsoluteLayout
         android:id="@+id/WalkingLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="180dp"
         android:background="#FFFFFF"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/PublicTransitLayout">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="159dp"
+            android:layout_height="200dp"
             android:text="WALKING"
-            android:textSize="40dp"
+            android:textSize="60dp"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textStyle="bold"
-            android:layout_below="@+id/absoluteLayout"
-            android:layout_alignParentStart="true"
             android:id="@+id/WalkingText" />
 
         <Button
             android:id="@+id/WalkingButton"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_y="100dp"
             android:text="Display Walking Time Here"
-            android:layout_x="7dp"
-            android:layout_y="112dp"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:background="@drawable/transit_options_button_design"
+            android:textColor="#000000"/>
     </AbsoluteLayout>
 
 </RelativeLayout>
