--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -18,12 +18,19 @@
         android:title="@string/pref_header_data_sync" />-->
     <header
         android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$AddressPreferenceFragment"
-        android:icon="@drawable/ic_sync_black_24dp"
+        android:icon="@drawable/ic_home"
         android:title="Address" />
 
     <header
         android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$BlockedContactsPreferenceFragment"
-        android:icon="@drawable/ic_info_black_24dp"
+        android:icon="@drawable/ic_call"
         android:title="Block Contacts" />
+
+    <header
+        android:fragment="com.example.kayuho.coen390.Controller.SettingsActivity$TaxiPreferenceFragment"
+        android:icon="@drawable/ic_taxi"
+        android:title="Taxi #" />
+
+
 
 </preference-headers>
